@@ -1,3 +1,11 @@
+[b]Version 0.6.10[/b]:
+
+(2010-02-25)
+ * Possibility to sort the items of the playlist. Implemented by 
+   Neo254 <manuel.ohrndorf@gmx.net> 
+   http://smplayer.berlios.de/forum/viewtopic.php?p=423#p423
+
+
 [b]Version 0.6.9[/b]:
 
 (2010-02-18)
